# RP2350-Touch-7-Exp

./: CMakeLists.txt  README.md  bsp.cmake  lvgl.cmake
boards/: waveshare_rp2350_touch_lcd_7.h
lib/: CMakeLists.txt
lib/bsp/: bsp_gt911.c  bsp_gt911.h  bsp_rs485.c  bsp_rs485.h  bsp_sd_card.c  bsp_st7262.c  bsp_st7262.h  bsp_touch.h  bsp_xl2515.c  pio_rgb.pio
lib/lvgl/: lv_conf.waveshare
lib/lvgl/src/draw/sdl/: lv_draw_sdl_stack_blur.c
lib/lvgl/src/extra/libs/png/: lodepng.c  lodepng.h  lv_png.c
lib/lvgl/src/extra/libs/qrcode/: qrcodegen.c
lib/lvgl/src/extra/libs/tiny_ttf/: lv_tiny_ttf.c  stb_truetype_htcw.h
lib/lvgl/src/misc/: lv_math.c  lv_printf.c  lv_tlsf.c
lib/lvgl/tests/unity/: unity.c  unity_internals.h
lib/pio-usb/: CMakeLists.txt  pio_usb.c  pio_usb_configuration.h  pio_usb_host.c  usb_rx.pio  usb_tx.pio
lib/psramlib/: CMakeLists.txt  rp_pico_alloc.c
lib/psramlib/tlsf/: tlsf_block_functions.h
port/lvgl/: lv_conf.h  lv_port_disp.c  lv_port_indev.c
src/: BB.c  BpiBO.c  CMakeLists.txt  ReXP1.c  Widgets.cpp  bracket.c  bracket_corner.h  main.cpp
src/tmp/: Widgets.cpp  Widgets.h
